# mirs24_soft

./: README.md
document/: map.pgm  micro_ros.xlsx  mirs_ros_esp32.pptx
esp32/ESP_send/: ESP_send.ino  define.h  enc.ino  odom.ino
esp32/ESP_send_Multi/: define.h  odom.ino
esp32/MG5-ESP32-Shield/: ESP32-WROOM-32E_4M.bak  MG5-ESP32-Shield-B_Cu.gbr  MG5-ESP32-Shield-B_Mask.gbr  MG5-ESP32-Shield-B_Paste.gbr  MG5-ESP32-Shield-B_Silkscreen.gbr  MG5-ESP32-Shield-Edge_Cuts.gbr  MG5-ESP32-Shield-F_Cu.gbr  MG5-ESP32-Shield-F_Mask.gbr  MG5-ESP32-Shield-F_Paste.gbr  MG5-ESP32-Shield-F_Silkscreen.gbr  MG5-ESP32-Shield-NPTH-drl_map.gbr  MG5-ESP32-Shield-NPTH.drl  MG5-ESP32-Shield-PTH-drl_map.gbr  MG5-ESP32-Shield-PTH.drl  MG5-ESP32-Shield-job.gbrjob  MG5-ESP32-Shield.kicad_pcb  MG5-ESP32-Shield.kicad_prl  MG5-ESP32-Shield.kicad_pro  MG5-ESP32-Shield.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
esp32/MG5-ESP32-Shield/ESP32-WROOM-32E.pretty/: ESP32-WROOM-32E.kicad_mod
esp32/MG5-ESP32-Shield/ESP32.pretty/: ESP32.kicad_mod
esp32/MG5-ESP32-Shield/Free-hole.pretty/: 8x31.kicad_mod
esp32/MG5-ESP32-Shield/XH.pretty/: XH-3pin.kicad_mod  XH-5pin.kicad_mod
esp32/MG5-ESP32-Shield/hole_19pin.pretty/: hole_19pin.kicad_mod
esp32/encoder_nomi_soshin/: encoder.ino  encoder_nomi_soshin.ino
esp32/get_encoder/sketch_oct25c/: encoder_ino.ino  sketch_oct25c.ino
esp32/micro_ros_for_esp32/: cmd_vel.ino  define.h  encoder.ino  micro_ros_for_esp32.ino  odom 1.ino  odom.ino  quaternion.h
jetson/: launch.sh  nav2_params.yaml
jetson/node/odometry_publisher/: CMakeLists.txt  package.xml
jetson/node/odometry_publisher/src/: odometry_publisher.cpp
rapi/node/: CMakeLists.txt  encoder_odom_publisher.cpp  package.xml
rapi/node/src/: encoder_odom_addsetting.cpp
rapi/odom_publisher/: Cmake.txt  odom_publisher.cpp  package.xml
rapi/rotary_encoder/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
rapi/rotary_encoder/rotary_encoder/: odom2_encorder_node.py  odom_encoder_node.py  rotary_encoder_node.py
