<?xml version="1.0"?>
<package format="2">
  <name>raspi_odom</name>
  <version>0.0.1</version>
  <description>ROS2 Odometry Publisher using WiringPi</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- wiringPiを明示的に依存関係として追加 -->
  <exec_depend>wiringpi</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

</package>
