<?xml version="1.0"?>
<package format="3">
  <name>rotary_encoder</name>
  <version>0.0.0</version>
  <description>Rotary Encoder ROS2 Node</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>setuptools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

